# linkedin-job-scraper

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.json  linkedin_jobs.py  linkedin_metrics.py  requirements.txt  tailor_cv.py
.githooks/: pre-push
application-agent/: .gitignore  README.md  config.example.json  pyproject.toml
application-agent/data/: profile.example.json
application-agent/docs/: CONTRATO-JOB-CANDIDATE.md
application-agent/scripts/: setup.sh  status.sh
application-agent/skills/ats-form-learning/: SKILL.md
application-agent/src/candidatura_agent/: __init__.py  adapters.py  ashby_adapter.py  asset_cli.py  assets.py  browser.py  contracts.py  daily_report.py  dashboard.py  db.py  ingest.py  linkedin_apply.py  policy.py  report.py  run_lock.py
application-agent/tests/: test_adapters.py  test_ashby_adapter.py  test_asset_cli.py  test_assets.py  test_browser.py  test_contract.py  test_ingest_db.py  test_linkedin_apply.py  test_notifications.py  test_report.py
contracts/: job-candidate.v1.schema.json
docs/: COMO-FUNCIONA.md  arquitetura.html
docs/plans/: 2026-07-13-candidatura-autonoma.md  2026-07-23-destravar-envio.md
scripts/: apply_manual.py  audit_public_tree.py  run_dashboard.sh  run_hourly.sh  run_report.sh  setup.sh  status.sh
skills/linkedin-job-setup/: SKILL.md
tests/: test_adapters.py  test_asset_cli.py  test_assets.py  test_browser.py  test_dashboard.py  test_hourly.py  test_ingest_db.py  test_job_contract_output.py  test_notifications.py  test_policy.py  test_report.py  test_run_lock.py
(+11 files in other folders)
