[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candidatura-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["playwright>=1.58,<2"]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.hatch.build.targets.wheel]
packages = ["src/candidatura_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
